--- a/style.css
+++ b/style.css
@@ -2,16 +2,57 @@
     background-color: black;
     font-family:Helvetica, Arial, sans-serif;
     color:seashell;
-    opacity:0.9;
+    opacity:0.93;
     text-align: center;
     max-width:100%;
-    max-height:100%
+    max-height:1;
 
 }
 
+#navContainer{
+    position:fixed;
+    top:0;
+    z-index: 1;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    align-items:center;
+    min-height: 69px;
+    width:100%;
+    opacity: 100%;
+    padding-right: 30px;
+    border-bottom: 1px solid seashell;
+}
+#logo{
+    height: 50px;
+}
+nav{
+    padding-right:20px
+}
+nav ul{
+    /* background-color: aquamarine; */
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    font-size: 20px;
+}
+
+nav ul li a:hover{
+    font-size: 30px;
+    background-color: rgba(84, 136, 233, 0.623);
+    border-radius: 50%;
+    padding:2px;
+
+}
+
+nav ul li {
+    margin:auto 10px;
+    list-style:none;
+}
 
 #mainContainer {
-    border: 2px red solid;
+    /* border: 2px red solid; */
     display:flex;
     flex-wrap: wrap;
     flex-direction:column;
@@ -23,12 +64,13 @@
     margin:20px auto;
     display:flex;
     flex-direction:column;
-    border: 1px bisque solid;
+    /* border: 1px bisque solid; */
 
 }
 
 
 #mission{
+    margin-top: 0px;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -53,7 +95,7 @@
 }
 
 .box{
-    border: 1px orangered solid;
+    /* border: 1px bisque solid; */
     width:300px;
     height:250px;
     margin: 5px 10px;
@@ -104,3 +146,27 @@
     text-align: left;
     margin: 20px;
 }
+
+
+
+
+@media screen and (max-width: 600px) {
+    #navContainer{
+        position:fixed;
+        top:0;
+        z-index: 1;
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
+        min-height: 69px;
+        width:100%;
+        opacity: 100%;
+        padding-right: 30px;
+    }
+
+    #logo{
+        width:fit-content;
+        height: fit-content;
+    }
+  }
